--- a/about.html
+++ b/about.html
@@ -36,154 +36,61 @@
             <!-- LINKS -->
             <nav class="navPrincipal" id="navPrincipal">
                 <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-                    <li><a href="index.html" class="nav-link px-2 link-light">HOME</a>
+                    <li><a id="HOME" href="index.html" class="nav-link px-2 link-light">HOME</a>
                     </li>
-                    <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a>
+                    <li><a id="PORTFOLIO" href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a>
                     </li>
-                    <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
-                    <li><a href="about.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">ABOUT
-                            US</a></li>
-                    <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+                    <li><a id="GALLERY" href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
+                    <li><a id="ABOUT_US" href="about.html"
+                            class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">ABOUT_US</a></li>
+                    <li><a id="CONTACT_US" href="contact.html" class="nav-link px-2 link-light">CONTACT_US</a></li>
+                    <li>
+                        <div class="btn-group" id="lenguajes">
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                                data-bs-auto-close="true" aria-expanded="false" id="btnLeng" style="color: white;">
+                                Español
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" onclick="clickLenguaje('Español')">Español
+                                        <img src="img/idiomas/MEXICO.jpg" height="10px"></a>
+                                </li>
+                                <li><a class="dropdown-item" onclick="clickLenguaje('Ingles')">Ingles
+                                        <img src="img/idiomas/USA.jpg" height="10px"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </header>
         <!-- FIN MENU -->
-
-        <!-- FOTOS DE CADA EQUIPOS-->
-        <div class="container-fluid">
-            <!-- JULIAN ANGEL-->
-            <div class="row align-items-center justify-content-center zoomImage">
-                <div class="col-md-6 ps-5">
-                    <h3>Samuel Burelos Jerónimo</h3>
-                    <p>Hi, I'm Samuel, I was born on August 06th, 2023.
-                        I started to be passionate about programming since I was 12 years old in high school,
-                        it all started with a basic programming course on YouTube where I started to see the
-                        flowcharts in Raptor, I really had a lot of fun to see the flow of the program.
-                    </p>
-
-                    <p>My greatest gift was to be invited to be part of this venture. I have a lot of faith and hope to
-                        take myself and my team far.
-                    </p>
-                </div>
-                <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/integrantes/samyXD.jpeg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
-                        class="mx-auto rounded-circle" height="300">
-                </div>
+        <div>
+            <div class="container-wrapper-genially" style="position: relative; min-height: 400px; max-width: 100%;">
+                <video class="loader-genially" autoplay="autoplay" loop="loop" playsinline="playsInline" muted="muted"
+                    style="position: absolute;top: 45%;left: 50%;transform: translate(-50%, -50%);width: 80px;height: 80px;margin-bottom: 10%">
+                    <source src="https://static.genial.ly/resources/loader-default.mp4" type="video/mp4" />Your browser
+                    does
+                    not support the video tag.
+                </video>
+                <div id="651f131eca2dcc0011436f27" class="genially-embed"
+                    style="margin: 0px auto; position: relative; height: auto; width: 100%;"></div>
             </div>
-            <!-- FIN JULIAN ANGEL-->
-            <hr>
-            <!-- SAMUEL BURELOS-->
-            <div class="row align-items-center justify-content-center zoomImage">
-                <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/integrantes/julian.jpg" class="mx-auto rounded-circle"
-                        style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;" width="300">
-                </div>
-                <div class="col-md-6 ps-5">
-                    <h3>Eduardo Julián Julián Ángel</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
-                    </p>
+            <div>
 
-                    <p>With this in mind, we decided to start a business so that in the future we could work in what
-                        we like and earn a decent living.
-                    </p>
-                </div>
             </div>
-            <!-- FIN SAMUEL BURELOS-->
-            <hr>
-            <!-- RODOLFO CORDOVA-->
-            <div class="row align-items-center justify-content-center zoomImage">
-                <div class="col-md-6 ps-5">
-                    <h3>Rodolfo Pérez Córdova</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
-                    </p>
+            <script>(function (d) { var js, id = "genially-embed-js", ref = d.getElementsByTagName("script")[0]; if (d.getElementById(id)) { return; } js = d.createElement("script"); js.id = id; js.async = true; js.src = "https://view.genial.ly/static/embed/embed.js"; ref.parentNode.insertBefore(js, ref); }(document));</script>
 
-                    <p>With this in mind, we decided to start a business so that in the future we could work in what
-                        we like and earn a decent living.
-                    </p>
-                </div>
-                <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/integrantes/rodolfo.jpg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
-                        class="mx-auto rounded-circle" width="300">
-                </div>
-            </div>
-            <!-- FIN RODOLFO CORDOVA-->
-            <hr>
-            <!-- NAYELI-->
-            <div class="row align-items-center justify-content-center zoomImage">
-                <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/integrantes/nallely.jpg" style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;"
-                        width="300" class="mx-auto rounded-circle" width="300">
-                </div>
-                <div class="col-md-6 ps-5">
-                    <h3>Nayeli del Carmen López López</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
-                    </p>
-
-                    <p>With this in mind, we decided to start a business so that in the future we could work in what
-                        we like and earn a decent living.
-                    </p>
-                </div>
-            </div>
-            <!-- FIN NAYELI-->
-            <hr>
-            <!-- ERICK-->
-            <div class="row align-items-center justify-content-center zoomImage">
-                <div class="col-md-6 ps-5">
-                    <h3>Erick de Jésus Alonso Ángel</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
-                    </p>
-
-                    <p>With this in mind, we decided to start a business so that in the future we could work in what
-                        we like and earn a decent living.
-                    </p>
-                </div>
-                <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/integrantes/Erick.jpg" style="box-shadow: 12px 8px 16px 0px rgb(67, 0, 100) ;"
-                        class="mx-auto rounded-circle" width="300">
-                </div>
-            </div>
-            <!-- FIN RODOLFO-->
-            <hr>
-            <!-- FREDDY-->
-            <div class="row align-items-center justify-content-center zoomImage">
-                <div class="col-md-6 text-center" style="width: 550px;">
-                    <img src="img/integrantes/Freddy.jpeg" style="box-shadow: -12px 8px 16px 0px rgb(0, 0, 100) ;"
-                        width="300" class="mx-auto rounded-circle" width="300">
-                </div>
-                <div class="col-md-6 ps-5">
-                    <h3>Freddy Rubén Franco Lugo</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
-                    </p>
-
-                    <p>With this in mind, we decided to start a business so that in the future we could work in what
-                        we like and earn a decent living.
-                    </p>
-                </div>
-            </div>
-            <!-- FIN NAYELI-->
         </div>
-
-        <!-- FIN FOTOS DE CADA EQUIPOS-->
 
         <!-- FOOTER -->
         <footer class="text-white text-center py-3" style="background-color: #0d4b0f ;">
             <p>© 2023 VisionSoft | All rights reserved</p>
         </footer>
-        <!-- FIN FOOTER -->
+    </div>
 
-        <!-- Bootstrap JS-->
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/scripts.js"></script>
+    <!-- Bootstrap JS-->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
     </div>
 </body>
 
