--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,30 @@
       <!-- LINKS -->
       <nav class="navPrincipal" id="navPrincipal">
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-          <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
-          <li><a href="portfolio.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">PORTFOLIO</a>
+          <li><a id="HOME" href="index.html" class="nav-link px-2 link-light">HOME</a>
           </li>
-          <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
-          <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
-          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+          <li><a id="PORTFOLIO" href="portfolio.html"
+              class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">PORTFOLIO</a>
+          </li>
+          <li><a id="GALLERY" href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
+          <li><a id="ABOUT_US" href="about.html" class="nav-link px-2 link-light">ABOUT_US</a></li>
+          <li><a id="CONTACT_US" href="contact.html" class="nav-link px-2 link-light">CONTACT_US</a></li>
+          <li>
+            <div class="btn-group" id="lenguajes">
+              <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" data-bs-auto-close="true"
+                aria-expanded="false" id="btnLeng" style="color: white;">
+                Español
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" onclick="clickLenguaje('Español')">Español
+                    <img src="img/idiomas/MEXICO.jpg" height="10px"></a>
+                </li>
+                <li><a class="dropdown-item" onclick="clickLenguaje('Ingles')">Ingles
+                    <img src="img/idiomas/USA.jpg" height="10px"></a>
+                </li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
