Cambio al espanol

--- a/about.html
+++ b/about.html
@@ -36,14 +36,13 @@
             <!-- LINKS -->
             <nav class="navPrincipal" id="navPrincipal">
                 <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-                    <li><a href="index.html" class="nav-link px-2 link-light">HOME</a>
+                    <li><a href="index.html" class="nav-link px-2 link-light">INICIO</a>
                     </li>
                     <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a>
                     </li>
-                    <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
-                    <li><a href="about.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">ABOUT
-                            US</a></li>
-                    <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+                    <li><a href="gallery.html" class="nav-link px-2 link-light">GALERIA</a></li>
+                    <li><a href="about.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact.html" class="nav-link px-2 link-light">CONTACTANOS</a></li>
                 </ul>
             </nav>
         </header>
@@ -55,14 +54,15 @@
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 ps-5">
                     <h3>Samuel Burelos Jerónimo</h3>
-                    <p>Hi, I'm Samuel, I was born on August 06th, 2023.
-                        I started to be passionate about programming since I was 12 years old in high school,
-                        it all started with a basic programming course on YouTube where I started to see the
-                        flowcharts in Raptor, I really had a lot of fun to see the flow of the program.
+                    <p>Hola, soy Samuel, nací el 06 de agosto de 2023. Empecé a apasionarme por la programación desde 
+                        los 12 años en la secundaria, todo empezó con un curso básico de programación en YouTube donde 
+                        comencé a ver los diagramas de flujo. En Raptor, realmente me divertí mucho viendo el flujo 
+                        del programa.
                     </p>
 
-                    <p>My greatest gift was to be invited to be part of this venture. I have a lot of faith and hope to
-                        take myself and my team far.
+                    <p>
+                        Mi mayor regalo fue que me invitaran a ser parte de este emprendimiento. Tengo 
+                        mucha fe y esperanza de llevarme lejos a mí y a mi equipo.
                     </p>
                 </div>
                 <div class="col-md-6 text-center" style="width: 550px;">
@@ -96,9 +96,10 @@
             <div class="row align-items-center justify-content-center zoomImage">
                 <div class="col-md-6 ps-5">
                     <h3>Rodolfo Pérez Córdova</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur magni repellendus, non
-                        soluta delectus reiciendis ipsam pariatur dolore, animi beatae illum aperiam fuga nesciunt
-                        ratione hic molestias mollitia eos iure?
+                    <p>
+                        Hola, soy Rodolfo, nací el 28 de noviembre de 1998. De niño habia imaginado una vida diferente, 
+                        lo cual me inspiró a buscar crecer, no solo como persona; quiero ser alguien que sea parte de 
+                        algo grandioso, que traiga cosas buenas a la sociedad. Soy una persona que le gusta mucho 
                     </p>
 
                     <p>With this in mind, we decided to start a business so that in the future we could work in what
