--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- INDEX CSS -->
   <link rel="stylesheet" href="css/index.css">
 </head>
-
+}
 <body>
   <div class="divContent">
     <!-- MENU -->
@@ -36,12 +36,12 @@
       <!-- LINKS -->
       <nav class="navPrincipal" id="navPrincipal">
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-          <li><a href="index.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">HOME</a></li>
-          <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a>
+          <li><a href="index.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">INICIO</a></li>
+          <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTAFOLIO</a>
           </li>
-          <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
-          <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
-          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+          <li><a href="gallery.html" class="nav-link px-2 link-light">GALERIA</a></li>
+          <li><a href="about.html" class="nav-link px-2 link-light">SOBRE NOSOTROS</a></li>
+          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACTANOS</a></li>
         </ul>
       </nav>
     </header>
@@ -71,19 +71,19 @@
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="visually-hidden">Anterior</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
         data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="visually-hidden">Siguiente</span>
       </button>
     </div>
     <img src="img/resplendent-quetzal.png" class="imgQuetzal">
     <!-- FIN CAROUSEL -->
     <div style=" padding: 30px;">
       <!-- PERFIL DE EQUIPO -->
-      <h3 class="text-center">Who are the VisionSoft team?</h4>
+      <h3 class="text-center">¿Quiénes forman el equipo de VisionSoft?</h4>
         <div class="profile d-flex justify-content-center" style="overflow: visible;">
           <!-- Hexágono 1 -->
           <div style="height: 360px;">
@@ -137,27 +137,27 @@
         <div class="container-fluid">
           <!-- SERVICES -->
           <hr>
-          <h3 class="text-center my-4">Services</h3>
+          <h3 class="text-center my-4">Servicios</h3>
           <div class="row -flex align-items-center justify-content-center text-center">
             <div class="col-sm-3">
-              <img src="img/SS_1.png" style="overflow: hidden; border-radius: 5px;" class="rounded img-fluid zoom-image"
+              <img src="img/SS_1_es.png" style="overflow: hidden; border-radius: 5px;" class="rounded img-fluid zoom-image"
                 alt="">
             </div>
             <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
-              <img src="img/SS_2.png" class="rounded img-fluid zoom-image" alt="">
+              <img src="img/SS_2_es.png" class="rounded img-fluid zoom-image" alt="">
             </div>
             <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
-              <img src="img/SS_3.png" class="rounded img-fluid zoom-image" alt="">
+              <img src="img/SS_3_es.png" class="rounded img-fluid zoom-image" alt="">
             </div>
           </div><br>
 
 
           <div class="row -flex align-items-center justify-content-center text-center">
             <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
-              <img src="img/SS_4.png" class="rounded img-fluid zoom-image">
+              <img src="img/SS_4_es.png" class="rounded img-fluid zoom-image">
             </div>
             <div class="col-sm-3" style="overflow: hidden; border-radius: 5px;">
-              <img src="img/SS_5.png" class="rounded img-fluid zoom-image">
+              <img src="img/SS_5_es.png" class="rounded img-fluid zoom-image">
             </div>
           </div>
           <!-- FIN SERVICES -->
@@ -166,7 +166,7 @@
           <br>
           <br>
           <!-- OURS SKILLS -->
-          <h3 class="text-center my-4">Ours Skills</h3>
+          <h3 class="text-center my-4">Nuestras habilidades</h3>
           <div class="row d-flex align-items-center justify-content-center text-center">
             <div class="col-sm-3">
               <img src="img/react.png" class="rounded img-fluid zoom-image">
@@ -195,20 +195,21 @@
           <!-- OUR HISTORY -->
           <div class="ourHistory">
             <div class="col-md-6">
-              <h3>Our History</h3>
-              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">It
-                all started with a simple idea "to work in what we like," most of the members experienced
-                what is the sacrifice of working in something totally different from the technology area, and
-                end up in despair in a place where our effort is not valued nor the hours and hours of effort.
+              <h3>Nuestra historia</h3>
+              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+                Todo comenzó con una simple idea "trabajar en lo que nos gusta", la mayoría de los integrantes 
+                experimentaron lo que es el sacrificio de trabajar en algo totalmente diferente al área de tecnología, 
+                y terminan desesperados en un lugar donde nuestro esfuerzo no es valorado. ni las horas y horas de 
+                esfuerzo.
               </p>
 
               <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                With this in mind, we decided to start a business so that in the future we could work in what
-                we like and earn a decent living.
+                Con esto en mente decidimos montar un negocio para que en el futuro podamos trabajar en lo que nos gusta 
+                y ganarnos la vida dignamente en un ambiente laboral sano.
               </p>
             </div>
             <div class="col-md-6 text-center img-history">
-              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500"
+              <img src="img/Team SpartanCode/virtual1.jpg" class="mx-auto rounded zoom-image" width="500"
                 style="box-shadow: 12px 12px 10px 4px rgb(0, 0, 0);">
             </div>
           </div>
@@ -218,7 +219,7 @@
 
     <!-- FOOTER -->
     <footer class="text-white text-center py-3" style="background-color: #0d4b0f ;">
-      <p>© 2023 VisionSoft | All rights reserved</p>
+      <p>© 2023 VisionSoft | Todos los derechos reservados</p>
     </footer>
 
     <!-- Bootstrap JS-->
