--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,12 @@
       <!-- LINKS -->
       <nav class="navPrincipal" id="navPrincipal">
         <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-          <li><a href="index.html" class="nav-link px-2 link-light">HOME</a></li>
-          <li><a href="portfolio.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">PORTFOLIO</a>
+          <li><a href="index.html" class="nav-link px-2 link-light">INICIO</a></li>
+          <li><a href="portfolio.html" class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">PORTAFOLIO</a>
           </li>
-          <li><a href="gallery.html" class="nav-link px-2 link-light">GALLERY</a></li>
-          <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
-          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+          <li><a href="gallery.html" class="nav-link px-2 link-light">GALERIA</a></li>
+          <li><a href="about.html" class="nav-link px-2 link-light">SOBRE NOSOTROS</a></li>
+          <li><a href="contact.html" class="nav-link px-2 link-light">CONTACTANOS</a></li>
         </ul>
       </nav>
     </header>
@@ -51,7 +51,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/SlavaShop.jpg" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> SlavaShop Online Sales</h5>
+          <h3 class="card-title">Sitio web -> Ventas en Línea de SlavaShop</h5>
             <p class="card-text"></p>
             <a href="https://github.com/SamuelBureloJeronimo/SpartanCode-front.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -61,7 +61,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/macuspanaDigital.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> Fierro Ganadero</h5>
+          <h3 class="card-title">Sitio web -> Fierro Ganadero</h5>
             <p class="card-text"></p>
             <a href="https://github.com/erickalonso98/fierro-client.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -71,7 +71,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/urgencias.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> Sistema Estatal de Urgencias</h5>
+          <h3 class="card-title">Sitio web -> Sistema Estatal de Urgencias</h5>
             <p class="card-text"></p>
             <a href="https://github.com/Nayeli2208/SISTEM.git" target="_blank" class="btn btn-primary github"></a>
         </div>
@@ -80,7 +80,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/anime.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> Animes en Español</h5>
+          <h3 class="card-title">Sitio web -> Animes en Español</h5>
             <p class="card-text"></p>
             <a href="https://github.com/SamuelBureloJeronimo/animeLatam-Frontend.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -90,7 +90,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/videojuegos.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> LuckGames</h5>
+          <h3 class="card-title">Sitio web -> Juegos de Suerte</h5>
             <p class="card-text"></p>
             <a href="https://github.com/SamuelBureloJeronimo/LuckGames.git" target="_blank"
               class="btn btn-primary github"></a>
@@ -100,7 +100,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/macuspanaDigital.png" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> Macuspana Digital</h5>
+          <h3 class="card-title">Sitio web -> Macuspana Digital</h5>
             <p class="card-text"></p>
             <div>
               <a href="" target="_blank" class="btn btn-primary github"></a><a
@@ -112,7 +112,7 @@
       <div class="card box-CardPort">
         <img src="img/proyects/PVF.jpg" class="card-img-top">
         <div class="d-flex justify-content-center">
-          <h3 class="card-title">DesktopApp -> Pharmacy Point-Of-Sale</h5>
+          <h3 class="card-title">Aplicación de escritorio -> Punto de Venta de Farmacia</h5>
             <p class="card-text"></p>
             <div>
               <a href="https://github.com/SamuelBureloJeronimo/PuntoDeVentaFarmacias.git" target="_blank"
@@ -123,7 +123,7 @@
     </div>
     <!-- FOOTER -->
     <footer class="text-white text-center py-3" style="background-color: #0d4b0f ;">
-      <p>© 2023 VisionSoft | All rights reserved</p>
+      <p>© 2023 VisionSoft | Todos los derechos reservados</p>
     </footer>
     <!-- FIN FOOTER -->
     <script src="js/bootstrap.bundle.min.js"></script>
