--- a/gallery.html
+++ b/gallery.html
@@ -36,20 +36,20 @@
             <!-- LINKS -->
             <nav class="navPrincipal" id="navPrincipal">
                 <ul class="col-12 col-md-auto nav justify-content-center mb-md-0 me-5">
-                    <li><a href="index.html" class="nav-link px-2 link-light">HOME</a>
+                    <li><a href="index.html" class="nav-link px-2 link-light">INICIO</a>
                     </li>
                     <li><a href="portfolio.html" class="nav-link px-2 link-light">PORTFOLIO</a>
                     </li>
                     <li><a href="gallery.html"
-                            class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">GALLERY</a></li>
-                    <li><a href="about.html" class="nav-link px-2 link-light">ABOUT US</a></li>
-                    <li><a href="contact.html" class="nav-link px-2 link-light">CONTACT US</a></li>
+                            class="nav-link px-2 link-dark seleccionado bg-white rounded p-2">GALERIA</a></li>
+                    <li><a href="about.html" class="nav-link px-2 link-light">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact.html" class="nav-link px-2 link-light">CONTACTANOS</a></li>
                 </ul>
             </nav>
         </header>
         <!-- FIN MENU -->
         <div class="d-flex justify-content-center align-items-center" style="flex-direction: column; padding: 10px;">
-            <img src="img/Team SpartanCode/2023-09-16.jpg" class="boxGallery perfH">
+            <!-- <img src="img/Team SpartanCode/2023-09-16.jpg" class="boxGallery perfH"> -->
             <img src="img/Team SpartanCode/virtual1.jpg" class="boxGallery">
             <img src="img/Team SpartanCode/2023-09-23.jpg" class="boxGallery perfH">
         </div>
