--- a/index.html
+++ b/index.html
@@ -214,19 +214,15 @@
             <div class="col-md-6">
               <h3 id="ourHistoryH3">Our History</h3>
               <p id="p1_OurHistory"
-                style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">It
+                style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: justify;">
+                It
                 all started with a simple idea "to work in what we like," most of the members experienced
                 what is the sacrifice of working in something totally different from the technology area, and
                 end up in despair in a place where our effort is not valued nor the hours and hours of effort.
               </p>
-
-              <p style="font-size: 20px; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                With this in mind, we decided to start a business so that in the future we could work in what
-                we like and earn a decent living.
-              </p>
             </div>
             <div class="col-md-6 text-center img-history">
-              <img src="img/equipo.jpg" class="mx-auto rounded zoom-image" width="500"
+              <img src="img/Team SpartanCode/2023-10-21.jpg" class="mx-auto rounded zoom-image" width="500"
                 style="box-shadow: 12px 12px 10px 4px rgb(0, 0, 0);">
             </div>
           </div>
