--- a/index.html
+++ b/index.html
@@ -124,12 +124,11 @@
               <h4>Rodolfo</h4>
             </div>
           </div>
-
           <!-- Hexágono 4 -->
           <div class="hexPerfil" style="display: flex; height: 360px; align-items: center; margin: 5px;">
             <div style="text-align: center;">
-              <img src="img/integrantes/hexagon/Naye1.png" height="150px">
-              <h4>Nayeli</h4>
+              <img src="img/integrantes/hexagon/freddy1.png" height="150px">
+              <h4>Freddy</h4>
             </div>
           </div>
           <!-- Hexágono 5 -->
@@ -139,15 +138,13 @@
               <h4>Erick</h4>
             </div>
           </div>
-
           <!-- Hexágono 6 -->
           <div class="hexPerfil" style="display: flex; height: 360px; align-items: center; margin: 5px;">
             <div style="text-align: center;">
-              <img src="img/integrantes/hexagon/freddy1.png" height="150px">
-              <h4>Freddy</h4>
+              <img src="img/integrantes/hexagon/Aixa.png" height="150px">
+              <h4>Aixa</h4>
             </div>
           </div>
-
         </div>
         <!-- FIN PERFIL DE EQUIPO -->
 
@@ -222,7 +219,7 @@
               </p>
             </div>
             <div class="col-md-6 text-center img-history">
-              <img src="img/Team SpartanCode/2023-10-21.jpg" class="mx-auto rounded zoom-image" width="500"
+              <img src="img/Team SpartanCode/2023-09-30.jpg" class="mx-auto rounded zoom-image" width="500"
                 style="box-shadow: 12px 12px 10px 4px rgb(0, 0, 0);">
             </div>
           </div>
