--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
       </div>
       <!-- CARD 2 -->
       <div class="card box-CardPort">
-        <img src="img/proyects/macuspanaDigital.png" class="card-img-top">
+        <img src="img/proyects/fierro.png" class="card-img-top">
         <div class="d-flex justify-content-center">
           <h3 class="card-title">WebSite -> Fierro Ganadero</h5>
             <p class="card-text"></p>
@@ -86,15 +86,6 @@
         </div>
       </div>
       <!-- CARD 3 -->
-      <div class="card box-CardPort">
-        <img src="img/proyects/urgencias.png" class="card-img-top">
-        <div class="d-flex justify-content-center">
-          <h3 class="card-title">WebSite -> Sistema Estatal de Urgencias</h5>
-            <p class="card-text"></p>
-            <a href="https://github.com/Nayeli2208/SISTEM.git" target="_blank" class="btn btn-primary github"></a>
-        </div>
-      </div>
-      <!-- CARD 4 -->
       <div class="card box-CardPort">
         <img src="img/proyects/anime.png" class="card-img-top">
         <div class="d-flex justify-content-center">
